fix: added margin-top to hp-video-section mobile version

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1982,6 +1982,7 @@ html, body, .homepage-body {
   }
 
   .hp-video-section {
+    margin-top: 50px;
     padding: 30px 20px 60px 20px;
   }
 
